--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,18 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+   font-family: Georgia, 'Times New Roman', Times, serif;
+   font-size: 18px;
+   font-weight: 500;
 }
+
+.header {
+  background-color: orangered;
+  color: #fff;
+  padding: 5rem;
+}
+
