--- a/src/index.css
+++ b/src/index.css
@@ -10,9 +10,113 @@ body {
    font-weight: 500;
 }
 
+img {
+  max-width: 100%;
+  height: auto;
+}
 .header {
   background-color: orangered;
   color: #fff;
   padding: 5rem;
+}
+
+.card1 {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  max-width: 80%;
+  margin: auto;
+  text-align: left;
+  background: #f7f7f7;
+}
+
+.card1 .small-div {
+  flex: 1;
+  padding: 40px;
+}
+
+.card1.card2 {
+  flex-direction: row-reverse;
+}
+.card1.card2 .big-div {
+  text-align: left;
+}
+
+.card1 .big-div {
+  flex: 0 50%;
+ padding: 40px;
+}
+.contact {
+  display: grid;
+  grid-template-columns: repeat(2,1fr);
+  max-width: 80%;
+  margin: 30px auto;
+  align-content: center;
+}
+.contact h1 {
+  grid-column: 1/3;
+  padding: 30px 0;
+ }
+
+ .contact .form, .contact--wrapper {
+   display: flex;
+   flex-direction: column; 
+   padding: 40px;
+} 
+.contact--wrapper {
+  margin-top: 75px;
+  padding: 0;
+  text-align: left;
+  height: 100%;
+}
+.contact--wrapper p {
+  color: orangered;
+  font-weight: bold;
+  font-size: 35px;
+  padding: 30px 0;
+}
+
+.contact--wrapper a, address{
+  color: #000;
+  text-decoration: none;
+  font-style: italic;
+  margin: 20px auto;
+}
+  .contact .form input, .contact .form textarea, button {
+    margin: 12px auto;
+    width: 100%;
+    padding: 10px;
+    border-radius: 10px;
+    outline: none;
+    border: 1px solid #333;
+  }
+
+button{
+  color : #fff;
+  background: orangered;
+  border: 0;
+  cursor: pointer;
+}
+@media only screen and (max-width:767px) {
+  .card1 .big-div {
+    padding: 20px;
+  }
+  .contact--wrapper {
+    margin: 0;
+  }
+  .contact .form {
+    padding: 0;
+  }
+  .card1, .card1.card2  {
+    flex-direction: column;
+  }
+  .contact {
+     grid-template-columns: repeat(1,1fr);
+  } 
+  .contact--wrapper {
+    grid-column: 1/3;
+  }
+
 }
 
